<resources>
    <string name="app_name">OC PIZZA</string>
    <string name="image_text">Image</string>
    <string name="go4lunch_text">Go4Lunch</string>
    <string name="find_a_nice_restaurant_text">Find a nice restaurant and invite your co-workers for lunch!</string>
    <string name="sign_in_facebook_text">sign in with facebook</string>
    <string name="sign_in_google_text">Sign in with google</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="map_view_text">Map View</string>
    <string name="list_view_text">List View</string>
    <string name="workmates_text">Workmates</string>
    <string name="hello_map_view_fragment_text">Hello Map View Fragment</string>
    <string name="hello_list_view_fragment_text">Hello List View fragment</string>
    <string name="hello_workmates_fragment_text">Hello Workmates fragment</string>
    <string name="your_lunch_text">YOUR LUNCH</string>
    <string name="settings_text">SETTINGS</string>
    <string name="logout_text">LOGOUT</string>
    <string name="open_navigation_drawer_description_text">Open navigation drawer</string>
    <string name="close_navigation_drawer_description_text">Close navigation drawer</string>
    <string name="profile_image_text">Profile image</string>
    <string name="facebook_image_text">Facebook image</string>
    <string name="google_image_text">Google + image</string>
    <string name="im_hungry_text">I\'m Hungry!</string>
    <string name="enter_restaurant_name_text">Enter restaurant name</string>
    <string name="search_restaurant_text">Search Panama Restaurant</string>
</resources>