<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/oc_pizza_4"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="271dp"
        android:layout_height="271dp"
        android:src="@drawable/outline_room_service_24"
        android:contentDescription="@string/image_text" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/go4lunch_text"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="71sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/find_a_nice_restaurant_text"
        android:textColor="@color/white"
        android:textStyle="bold|italic" />

    <Button
        android:id="@+id/sign_in_facebook_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="77dp"
        android:text="@string/sign_in_facebook_text"
        app:backgroundTint="#3F51B5" />

    <Button
        android:id="@+id/sign_in_google_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="17dp"
        app:backgroundTint="#F44336"
        android:text="@string/sign_in_google_text" />

</LinearLayout>